Closed
Bug 1337388
Opened 6 years ago
Closed 6 years ago
Remove unnecessary call to AsyncPanZoomEnabled in ExpireDisplayPortOnAsyncScrollableAncestor
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: kats, Assigned: kats)
Details
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
tnikkel
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details |
We don't really need to check if APZ is enabled before trying to expire a displayport. We only have displayports with APZ, and even if we later have displayports without APZ, we'll want to expire them just the same. So they're orthogonal concerns.
Comment hidden (mozreview-request) |
Comment 2•6 years ago
|
||
mozreview-review |
Comment on attachment 8834429 [details] Bug 1337388 - Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. https://reviewboard.mozilla.org/r/110378/#review111672
Attachment #8834429 -
Flags: review?(tnikkel) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bebe84133cae Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. r=tnikkel
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/bebe84133cae
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Assignee | ||
Updated•6 years ago
|
status-firefox51:
--- → wontfix
status-firefox52:
--- → fix-optional
status-firefox53:
--- → fix-optional
Version: Other Branch → 54 Branch
Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 8834429 [details] Bug 1337388 - Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. Approval Request Comment [Feature/Bug causing the regression]: original code was added in bug 990916 [User impact if declined]: nothing user-visible really, although this patch might fix the issue in bug 1328129 [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: no STR [Needs manual test from QE? If yes, steps to reproduce]: no, no STR [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: very small change - removing a redundant if condition clause and adding a null guard. both should be very safe [String changes made/needed]: none
Attachment #8834429 -
Flags: approval-mozilla-beta?
Attachment #8834429 -
Flags: approval-mozilla-aurora?
Comment 6•6 years ago
|
||
Comment on attachment 8834429 [details] Bug 1337388 - Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. A potential fix for bug 1328129. Let's take it in aurora first. Aurora53+.
Attachment #8834429 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 7•6 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/e9b44b27a129
Comment 8•6 years ago
|
||
Comment on attachment 8834429 [details] Bug 1337388 - Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. remove unnecessary check, beta52+
Attachment #8834429 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•6 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/11cbfffd2ea8
Comment 11•6 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-esr52/rev/11cbfffd2ea8
status-firefox-esr52:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•