Bug 1337388 - Remove unnecessary AsyncPanZoomEnabled check, and add a null guard. r=tnikkel a=gchang

MozReview-Commit-ID: 87zwTEwPyLt